View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023627 | Open CASCADE | OCCT:Modeling Algorithms | public | 2012-12-11 00:31 | 2013-04-29 15:21 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023627: Standard_OutOfRange in TopOpeBRep_FacesIntersector | ||||
Description | Test bugs modalg buc60704 fails in Debug mode on Windows due to OutOfRange exception in TopOpeBRep_FacesIntersector: iteration by WLVertexParameters array uses length of theSlin parameter for number of iterations, assuming it is always twice number of segments in theSlin. This is not always the case. | ||||
Steps To Reproduce | bugs modalg buc60744 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg buc60744 | ||||
child of | 0023547 | closed | Tests failures in debug mode |
|
Correction is pushed to CR23627, please review |
|
No remarks |
|
Dear BugMaster, Branch CR23627 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: bugs modalg buc60744 - OK. |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-12-11 00:31 |
|
New Issue | |
2012-12-11 00:31 |
|
Assigned To | => abv |
2012-12-11 00:37 |
|
Note Added: 0022640 | |
2012-12-11 00:37 |
|
Assigned To | abv => jgv |
2012-12-11 00:37 |
|
Status | new => resolved |
2012-12-13 12:36 |
|
Note Added: 0022685 | |
2012-12-13 12:36 |
|
Status | resolved => reviewed |
2012-12-13 17:20 |
|
Assigned To | jgv => mkv |
2012-12-16 08:58 |
|
Relationship added | child of 0023547 |
2012-12-25 17:11 |
|
Note Added: 0022837 | |
2012-12-25 17:12 |
|
Test case number | => bugs modalg buc60744 |
2012-12-25 17:12 |
|
Assigned To | mkv => bugmaster |
2012-12-25 17:12 |
|
Status | reviewed => tested |
2013-01-04 11:35 |
|
Changeset attached | => occt master 53e7fede |
2013-01-04 11:35 |
|
Assigned To | bugmaster => abv |
2013-01-04 11:35 |
|
Status | tested => verified |
2013-01-04 11:35 |
|
Resolution | open => fixed |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |