0023627: Standard_OutOfRange in TopOpeBRep_FacesIntersector

Number of iterations corrected in static function GetArc()